static/css/bot.scss
@import 'color';
@import 'chart';
@import 'dbot-banner';
@import 'fontello';
@import 'panel';
@import 'blockly-toolbox';
@import 'toolbox';
@import 'tour';
@import 'error';
@import 'deriv/index';


* {
    box-sizing: border-box;
}


html,
body {
    height: 100%;
    margin: 0em;
    max-width: 100%;
    max-height: 100%;
    font-size: 1em;
}

#server-status .online {
    background-color: green;
}

#server-status .connecting {
    background-color: yellow;
}

#server-status .offline {
    background-color: red;
}

#server-status span {
    display: inline-block;
    width: 1em;
    height: 1em;
    border-radius: 100%;
}

#blocklyDiv {
    position: absolute;
    height: 100%;
    width: 100%;
}

#blocklyArea {
    height: calc(100% - #{$HEADER_HEIGHT} - #{$TOOLBOX_HEIGHT});
}

@media only screen and (max-height: 723px) {
    #blocklyArea {
        height: 86%;
    }
}

.barspinner {
    position: fixed;
    left: 50%;
    top: 50%;
    margin-left: -5rem;
    z-index: 9999;
}

.icon-remove:before {
    content: 'X';
}

#header select,
#topbar select {
    color: #000;
    font-size: 1em;
}

#header {
    height: 81px;
    width: 100%;
    background-color: $brand-blue;
    border-top: 2px solid $brand-dark-blue;
    border-bottom: 4px solid $brand-orange;
    font-size: 18px;
    padding: 0 20px;
    z-index: 0;
}

#topbar {
    background-color: $brand-primary-dark;
    width: 100%;
    color: $white;
    line-height: 1;
    font-size: 70%;
    text-align: right;
    padding: 3px 20px;
    display: table;
}

.left-header {
    float: left;
}

.right-header {
    float: right;
}

#client-logged-in {
    display: none;
}

#login {
    display: none;
    margin: 0.6em 0;
}

.account {
    font-size: 16px;
}

#account-list {
    margin-right: 2em;
}

.btn-primary {
    color: $white !important;
    text-decoration: none !important;
    background: $brand-btn !important;
    border-color: $brand-btn !important;
}

.btn-primary:active,
.btn-primary:hover {
    color: $white !important;
    text-decoration: none !important;
    background-color: $brand-btn-active !important;
    border-color: $brand-btn-active !important;
}

.blocker {
    position: fixed;
    width: 100%;
    height: 100%;
    z-index: 1000;
    display: none;
    top: 0em;
    opacity: 0.1;
    left: 0em;
    background: black;
}

#stopButton, #summaryStopButton {
    display: none;
}

.languages {
    z-index: 100;
    right: 1.5em;
}

#select_language {
    top: -3px;
}
#display_language li {
    cursor: pointer;
    line-height: 0;
}
#container {
    position: fixed;
    height: calc(100% - 96px);
    width: 100%;
    left: 0px;
    transition: 0.5s;
}

.show-on-load {
    display: none;
}

.react-grid-HeaderCell {
    padding: 0px !important;
}

label {
    margin-bottom: 0px;
}

.ui-icon {
    background-image: none !important;
}

#_elev_io ._1g6cj {
    z-index: 10000 !important;
}

.notifyjs-corner {
    z-index: 10001 !important;
}

